7006471: fix for 6988439 crashes when pending list lock is null

Missing null check in owns_pending_list_lock() because this can be called before pending_list_lock is initialized.

Reviewed-by: never, kvn